@@ -3,12 +3,31 @@
 
 
 local control_overrides = {
+    ['Faster_Cars'] = {
+        -- Avoid conflicts, make the bindingsm ore accessible, and kinda reuse same bindings as for the helicopter.
+        { name = "car-mk2-change-speed", key_sequence = "SHIFT + W", alternative_key_sequence = "" },
+        { name = "car-mk2-ebrake", key_sequence = "SHIFT + S", alternative_key_sequence = "" }
+    },
     ['fluid_permutations_fixed'] = {
         -- Use more accessible inputs for fluid permutations (and avoid conflicts with other custom control overrides).
         { name = "next-ingredients-fluid-recipe", key_sequence = "[", alternative_key_sequence = "" },
         { name = "previous-ingredients-fluid-recipe", key_sequence = "", alternative_key_sequence = "" },
         { name = "next-results-fluid-recipe", key_sequence = "]", alternative_key_sequence = "" },
         { name = "previous-results-fluid-recipe", key_sequence = "", alternative_key_sequence = "" }
+    },
+    ['HelicopterRevival'] = {
+        -- Avoid binding conflicts, and use more convenient bindings.
+        { name = "heli-up", key_sequence = "SHIFT + W", alternative_key_sequence = "" },
+        { name = "heli-down", key_sequence = "SHIFT + S", alternative_key_sequence = "" },
+
+        -- Disable excess control bindings. Height adjustment does not seem to matter much. Floodlight toggle seems like
+        -- more of a gimmick, and remote buttons do not seem to work at all (and there is already an icon in upper-left
+        -- for this functionality).
+        { name = "heli-zaa-height-increase", key_sequence = "", alternative_key_sequence = "" },
+        { name = "heli-zab-height-decrease", key_sequence = "", alternative_key_sequence = "" },
+        { name = "heli-zba-toogle-floodlight", key_sequence = "", alternative_key_sequence = "" },
+        { name = "heli-zca-remote-heli-follow", key_sequence = "", alternative_key_sequence = "" },
+        { name = "heli-zcb-remote-open", key_sequence = "", alternative_key_sequence = "" }
     },
     ['Side Inserters'] = {
         -- Avoid some of the overlaps with existing controls, and try to make the bindings more accessible.
@@ -48,3 +67,15 @@ data.raw["item"]["asteroid-uranium-ore"]["icons"][2].tint = {a = 0.8,r = 70,g = 
 
 -- [Platforms] Align platform stack-size with landfill.
 data.raw["item"]["platform"].stack_size = 100
+
+-- [Faster Cars] Tweak the speed so the cars for a smoother progression curve.
+data.raw["car"]["carmk2"].friction = 0.0018
+data.raw["car"]["carmk3"].friction = 0.0025
+
+-- [Faster Cars] Re-add the gun turret to second tier car (leave the third tier unarmed).
+data.raw["car"]["carmk2"].guns = table.deepcopy(data.raw.car["car"].guns)
+data.raw["car"]["carmk2"].turret_animation = table.deepcopy(data.raw.car["car"].turret_animation)
+
+-- [Faster Cars] Re-enable damage from trees, after all cars are not tanks.
+data.raw["car"]["carmk2"].immune_to_tree_impacts = false
+data.raw["car"]["carmk3"].immune_to_tree_impacts = false
