@@ -24,13 +24,17 @@
         "CleanedConcrete >= 1.0.4",
         "electricboiler >= 1.1.0",
         "extra-storage-tank-minibuffer >= 0.1.4",
+        "Faster_Cars >= 0.1.1",
         "Flat-Solar >= 0.1.21",
         "Flow Control >= 3.1.4",
         "fluid_permutations_fixed >= 0.5.4",
         "FluidMustFlow >= 1.3.5",
+        "HelicopterRecolored >= 1.0.1",
+        "HelicopterRevival >= 0.2.2",
         "hercules-robots >= 1.0.1",
         "Kontraptions >= 1.0.4",
         "large-storage-tank >= 1.1.0",
+        "lex-aircraft >= 1.1.1",
         "logistic-tanks >= 0.0.3",
         "platforms >= 1.1.7",
         "PlutoniumEnergy >= 1.6.2",
